2005-09-02  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

        * fr/about/automated-engraving/: all pages translated
        (with Jean-Charles Malahieude <lilyfan@wanadoo.fr>)
        * fr/about/pubs.html: new translated page

2005-09-02  John Mandereau  <john.mandereau@free.fr>

        * GNUmakefile: add french essay big page generation

2005-09-01  John Mandereau  <john.mandereau@free.fr>

	* site/about/pubs.html: add linuxfr.org article link

2005-08-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install: update package links.

2005-08-30  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/index.html: updated link to 2.7.8

2005-08-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/index.html: announce 2.7.8

2005-08-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/pubs.html: 
	* site/news.ihtml: Add article: De Standaard.

2005-08-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/graphics/annotate-example-lead.png (Module): update.

	* site/switch/example-lead.ly: 	oops.

2005-08-16  Graham Percival  <gpermus@gmail.com>

	* site/install/macos.html, nl/install/macos.html,
	fr/install/macos.html: change fink's lilypond-unstable
	to lilypond-devel.  (package name change)

2005-08-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/index.html: update sca.uwaterloo.ca link to http

	* site/install/stable.ihtml: make URLs relative. 

2005-08-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/misc/conferences.html: clean links.

2005-08-16  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/: update download link to 2.7.4
	
2005-08-14  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/install/devel.ihtml: shouldn't have a header (index.html)
	already have it.

2005-08-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl/switch/howto.html: Update.

2005-08-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: set links for 2.7.4

2005-08-05  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/: update download link to 2.6.3
