@@ -7,7 +7,7 @@
     When revising a translation, copy the CVS Revision number from the
     original source file.  !-->
 
-<a href="input-format"></a>
+<a name="input-format"></a>
 
 <h2>Input format</h2>
 <p>
