@@ -31,7 +31,7 @@ print, staff lines should be relatively thicker. To match the thicker
 lines, the music symbols should also be relatively heavier. Both have
 been implemented in LilyPond 2.1.  The difference is hard to see here,
 due to the limited resolution of computer screens. For a more detailed
-view, view see the LilyPond PDF, available
+view, see the LilyPond PDF, available
 
 <a href="@DOC@v2.2/input/mutopia/F.Schubert/out-www/morgenlied.pdf">here</a>.
 
